--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
+    "expo-location": "^8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-google-places": "^3.1.2",
+    "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-maps": "0.26.1",
+    "react-native-places-input": "^1.1.2",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
